# PADAMO-RS

./: .gitignore  Cargo.toml  README.md  builder-lite.bat  builder-lite.sh  builder-release.bat  builder-release.sh  builder.sh  universal_build.sh
.github/workflows/: rust.yml
assets/: default.json
datetime-parser/: Cargo.toml
datetime-parser/src/: datetime_parser.rs  lib.rs
index_remapper/: Cargo.toml  guide.txt
index_remapper/src/: binary_ops.rs  errors.rs  expression.rs  indices.rs  lib.rs  slicing.rs  transformer.rs  utils.rs
padamo-api/: Cargo.toml
padamo-api/padamo-api-macros-internal/: Cargo.toml
padamo-api/padamo-api-macros-internal/src/: lib.rs
padamo-api/src/: common_categories.rs  function_operator.rs  headless_helpers.rs  lib.rs  prelude.rs  rng.rs
padamo-api/src/calculation_nodes/: ad_hoc_input_node.rs  ad_hoc_output_node.rs  content.rs  errors.rs  full_reader.rs  graph.rs  immediate.rs  mod.rs  node.rs  signal_time_node.rs
padamo-api/src/lazy_array_operations/: cache.rs  cutter.rs  merge.rs  mod.rs  operators.rs
padamo-api/src/lazy_array_operations/ndim_array/: indexing.rs  lao.rs  mod.rs  nalgebra_support.rs  ndim_array.rs
padamo-api/src/trigger_operations/: mod.rs  sparse_event_storage.rs
padamo-arraynd/: Cargo.toml
padamo-arraynd/src/: indexing.rs  lib.rs  nalgebra_support.rs  ndim_array.rs
padamo-base-processing/: Cargo.toml
padamo-base-processing/fast_mm/: Cargo.toml
padamo-base-processing/fast_mm/src/: heaps.rs  lib.rs  roller.rs
padamo-base-processing/src/: lib.rs  moving_median.rs  node_reg.rs  node_reg_mm.rs  ops.rs  ops_median.rs  padding.rs
padamo-basic-triggers/: Cargo.toml
padamo-basic-triggers/src/: lib.rs  node_reg.rs  ops.rs
padamo-core/: Cargo.toml
padamo-core/src/: .io_nodes.rs.kate-swp  boolconv.rs  cache.rs  constants.rs  filenames.rs  filenames_old.rs  io_nodes.rs  lib.rs  output.rs  strings.rs  strings_old.rs  temporal.rs  trigger_nodes.rs  trigger_ops.rs
padamo-core/src/remapper/: mod.rs  nodes.rs  ops.rs
padamo-detectors/: Cargo.toml  dsrc.md  rhai_api.md
padamo-detectors/src/: colors.rs  detector_example.txt  lib.rs  loaded_detectors_storage.rs  mesh.rs  polygon.rs  selector_chart.rs  selector_chart_simple.rs  transformer.rs
padamo-detectors/src/diagrams/: auxiliary.rs  color_sources.rs  colorbar.rs  mod.rs  modular_diagram.rs  scaling.rs  traits.rs
padamo-detectors/src/parser/: base_parsers.rs  detector_building_data.rs  mod.rs  shape_constructors.rs
padamo-detectors/src/scripted/: mod.rs
padamo-flatfielding/: Cargo.toml
padamo-flatfielding/src/: lambert.rs  lib.rs  nodes.rs  nodes_estimate.rs  ops.rs
padamo-functions/: Cargo.toml
padamo-functions/src/: lib.rs  macros.rs  nodes.rs
padamo-hdf5/: Cargo.toml
padamo-hdf5/src/: lib.rs  ops.rs
padamo-hdf5/src/nodes_mod/: array.rs  array_source.rs  joined.rs  mod.rs  save.rs  singular.rs  time_source.rs
padamo-iced-forms/: Cargo.toml
padamo-iced-forms-derive/: Cargo.toml
padamo-iced-forms-derive/src/: lib.rs
padamo-iced-forms/padamo-iced-forms-derive/: Cargo.toml
padamo-iced-forms/padamo-iced-forms-derive/src/: enums.rs  lib.rs  named_fields.rs  structs.rs  unnamed_fields.rs
padamo-iced-forms/src/: basetypes.rs  buttons.rs  double_entry_state.rs  errors.rs  lib.rs  options.rs  proxy.rs  refs.rs  traits.rs  vectors.rs
padamo-jemeuso-root/: Cargo.toml
padamo-jemeuso-root/src/: lib.rs  nodes.rs  nodes_legacy.rs  ops.rs  scalable_array.rs
padamo-mat/: Cargo.toml
padamo-mat/src/: compat.rs  lib.rs  nodes.rs  ops.rs
padamo-neuraltrigger/: Cargo.toml  model_A.onnx  model_L2.onnx
padamo-neuraltrigger/src/: config.rs  downloader.rs  lib.rs  nodes.rs  ops.rs  ort_check.rs  setup_onnx.rs
padamo-plaintext/: Cargo.toml
padamo-plaintext/src/: errors.rs  lib.rs  nodes.rs  nodes_legacy.rs  ops.rs  ops_temporal.rs  ops_transposed.rs
padamo-randoms/: Cargo.toml
padamo-randoms/src/: lib.rs  nodes.rs
padamo-signal-manipulation/: Cargo.toml
padamo-signal-manipulation/src/: lib.rs  node_reg.rs  nodes_stretch.rs  ops.rs  ops_stretch.rs  signal_length.rs  tempreduce_performance.rs
padamo-state-persistence/: Cargo.toml
padamo-state-persistence/src/: data.rs  lib.rs
padamo-stft/: Cargo.toml
padamo-stft/src/: lib.rs  main_node.rs  nodes_filters.rs  ops.rs  stft.rs
padamo-trackgen/: Cargo.toml
padamo-trackgen/src/: detector_finder.rs  lc_nodes.rs  lc_nodes_old.rs  lib.rs  nodes.rs  nodes_old.rs  ops.rs  requesters.rs  shape_parser.rs
padamo-trackgen/src/background/: mod.rs  nodes.rs  ops.rs
padamo-trackgen/src/ensquared_energy/: detector.rs  integral.rs  mod.rs
padamo-trackgen/src/legacy/: lc_nodes_rev1.rs  mod.rs  nodes_rev1.rs  ops_rev1.rs
padamo-trackgen/src/lightcurves/: lc_nodes.rs  mod.rs  psf.rs
padamo-trackgen/src/tracks_2d/: mod.rs  nodes.rs  ops.rs
padamo-trackgen/src/tracks_3d/: mod.rs  nodes.rs
padamo-trackgen/src/tracks_3d_old/: nodes.rs  ops.rs
padamo-transforms/: Cargo.toml
padamo-transforms/src/: lib.rs  nodes.rs  nodes_geo.rs
padamo-workspace/: Cargo.toml
padamo-workspace/src/: lib.rs
plotters_video/: Cargo.toml
plotters_video/src/: backend.rs  errors.rs  lib.rs  video_canvas.rs
plotters_video_ffmpeg/: Cargo.toml
plotters_video_ffmpeg/src/: backend.rs  errors.rs  lib.rs  time.rs  writer.rs
pseudotime/: Cargo.toml
pseudotime/src/: nodes.rs  ops.rs
src/: application.rs  assets.rs  compat.rs  datetime_parser.rs  detector_muxer.rs  double_entry_state.rs  loaded_detectors_storage.rs  main.rs  messages.rs  popup_message.rs  time_search.rs  transform_widget.rs
src/builtin_nodes/: mod.rs  viewer.rs  viewer_smart.rs
src/custom_widgets/: mod.rs  timeline.rs  treeview.rs
src/nodes_interconnect/: errors.rs  mod.rs
src/tools/: mod.rs
src/tools/detectors/: messages.rs  mod.rs  tuloma_source.dsrc
src/tools/editor/: clipboard.rs  editor_program.rs  messages.rs  mod.rs
src/tools/plotter/: colors.rs  data_state.rs  diagram.rs  form.rs  messages.rs  mod.rs
src/tools/plotter_new/: form.rs  (+5 more)
standalone_quantiles/: Cargo.toml
standalone_quantiles/src/: lib.rs
(+19 files in other folders)
