[package]
name = "padamo-rs"
version = "4.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio", "advanced"] }
# iced_native = "0.10.3"
# iced_wgpu = "0.11.1"
ordered_hash_map = { version = "0.4.0", features = ["serde"] }
plotters = "0.3"
plotters-iced = "0.11"
serde = "1.0.195"
serde_json = "1.0.111"
padamo-api = { path = "./padamo-api", features = ["serde"] }
padamo-workspace = { path = "./padamo-workspace" }
padamo-detectors = { path = "./padamo-detectors" }
padamo-state-persistence = { path = "./padamo-state-persistence" }
padamo-iced-forms = { path = "./padamo-iced-forms" }
padamo-iced-forms-derive = { path = "./padamo-iced-forms-derive" }
abi_stable = "0.11.3"
plotters-layout = "0.1.0"
# nfd = { git = "https://github.com/saurvs/nfd-rs.git" }
chrono = "0.4"
regex = "1.10.3"
once_cell = "1.19.0"
iced_aw = { version = "0.11", features = ["menu", "tabs", "card", "selection_list"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static", "threadsafe", "zlib"] }
hdf5-src = { version = "0.8.1", features = [ "threadsafe", "zlib"] }
libz-sys = { version = "1.1.15", features = ["zlib-ng"] }
sysinfo = "0.30.7"
rand = "0.8.5"
anyhow = "1.0.91"

[workspace]
members = ["padamo-core", "padamo-api", "padamo-base-processing", "padamo-basic-triggers", "padamo-detectors", "padamo-hdf5", "padamo-signal-manipulation", "padamo-workspace", "padamo-trackgen", "padamo-mat", "padamo-flatfielding", "padamo-functions", "padamo-neuraltrigger", "padamo-randoms", "padamo-stft", "padamo-state-persistence"]
resolver = "2"
