[package]
name = "padamo-api"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
topo_sort = "0.4.0"
padamo-api-macros-internal = { path = "./padamo-api-macros-internal" }
#iced = "0.12.0"
ndarray = "0.15.6"
paste = "1.0.14"
serde = { version = "1.0.196", features = ["derive"] }
ndarray-linalg = "0.16.0"
atomic_refcell = "0.1.13"
nom = "7.1.3"
thiserror = "1.0.61"
