[package]
name = "padamo-base-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Set crate to dynamic lib.
[lib]
name = "padamobasesignalprocessing"
crate-type = ["dylib"]


[dependencies]
# For things to work
abi_stable = "0.11.3"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
# Main padamo api
padamo-api = { path = "../padamo-api" }
rayon = "1.8.1"
fast_mm = { path = "./fast_mm" }
num_cpus = "1.16.0"
medians = "3.0.9"
