[package]
name = "padamo-base-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Set crate to dynamic lib.
[lib]
name = "padamobasesignalprocessing"
crate-type = ["dylib"]


[dependencies]
# For things to work
abi_stable = "0.11.3"
# ndarray-old = { version = "0.16.1", features = ["rayon"], package = "ndarray"}
ndarray = { version = "0.17.1", features = ["rayon"]}

# Main padamo api
padamo-api = { path = "../padamo-api", features = ["ndarray"] }
rayon = "1.10.0"
fast_mm = { path = "./fast_mm" }
num_cpus = "1.16.0"
medians = "3.0.12"
standalone_quantiles = { path = "../standalone_quantiles" }
atomic_float = "1.1.0"
