[package]
name = "padamo-detectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
iced = "0.12.0"
plotters = "0.3.5"
plotters-iced = "0.10.0"
plotters-layout = "0.1.0"
serde = { version = "1.0.196", features = ["derive"] }
padamo-api = { path = "../padamo-api" }
nom = { version = "7.1.3", features = ["alloc"] }
abi_stable = "0.11.3"
