[package]
name = "padamo-detectors"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
iced = { version = "0.13", features = ["canvas"] }
plotters = "0.3.5"
plotters-iced = "0.11"
plotters-layout = "0.1.0"
serde = { version = "1.0.196", features = ["derive"] }
# padamo-api = { path = "../padamo-api", features = ["serde"] }
padamo-arraynd = { path = "../padamo-arraynd", features = ["serde"]}
nom = { version = "7.1.3", features = ["alloc"] }
dyn-clone = "1.0.17"
thiserror = "1.0.61"
rhai = { version = "1.23.4", features = ["serde"] }
rhai-sci = "0.2.2"
padamo-iced-forms = { path = "../padamo-iced-forms" }
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
abi_stable = "0.11.3"

[features]
# serde_json = "1.0.145"
# anyhow = "1.0.100"
