[package]
name = "padamo-flatfielding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "padamoflatfielding"
crate-type = ["dylib"]

[dependencies]
# For things to work
abi_stable = "0.11.3"
# Main padamo api
padamo-api = { path = "../padamo-api" }
rayon = "1.10.0"
ndarray-stats = "0.5.1"
ndarray = "0.15.6"
noisy_float = "0.2.0"
# dyn-clone = "1.0.17"
