[package]
name = "padamo-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Set crate to dynamic lib.
[lib]
name = "padamofunctions"
crate-type = ["dylib"]


[dependencies]
# For things to work
abi_stable = "0.11.3"
# Main padamo api
padamo-api = { path = "../padamo-api", features = [] }
