[package]
name = "padamo-hdf5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Set crate to dynamic lib.
[lib]
name = "padamohdf5"
crate-type = ["dylib"]


[dependencies]
# For things to work
abi_stable = "0.11.3"
# Main padamo api
padamo-api = { path = "../padamo-api" }
ndarray = "0.15.6"

# Config to make sure that .mat is readable
# Cool thing you don't need "threadsafe" feature to make crate actually thread-safe

hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static", "zlib"] }
hdf5-src = { version = "0.8.1", features = ["zlib"] }
libz-sys = { version = "1.1.15", features = ["zlib-ng"] }

#hdf5 = { git = "https://github.com/mulimoen/hdf5-rust", features = ["static", "zlib"] }
#hdf5-src = { git = "https://github.com/mulimoen/hdf5-rust", features = [ "zlib", "deprecated"] }
#hdf5-sys = { git = "https://github.com/mulimoen/hdf5-rust", features = ["static", "zlib", "deprecated"] }
#libz-sys = { version = "1.1.15", features = ["zlib-ng", "static"] }
