[package]
name = "padamo-hdf5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Set crate to dynamic lib.
[lib]
name = "padamohdf5"
crate-type = ["dylib"]


[dependencies]
# For things to work
abi_stable = "0.11.3"
ndarray = "0.17.1"
# Main padamo api
padamo-api = { path = "../padamo-api", features = ["ndarray"] } # Tough crate. HDF5 uses ndarray 0.15 but padamo api uses up to date version.


hdf5 = { package = "hdf5-metno", version = "0.11.0", features = ["static", "zlib"]  }


#hdf5 = { git = "https://github.com/mulimoen/hdf5-rust", features = ["static", "zlib"] }
#hdf5-src = { git = "https://github.com/mulimoen/hdf5-rust", features = [ "zlib", "deprecated"] }
#hdf5-sys = { git = "https://github.com/mulimoen/hdf5-rust", features = ["static", "zlib", "deprecated"] }
#libz-sys = { version = "1.1.15", features = ["zlib-ng", "static"] }
