[package]
name = "padamo-iced-forms"
version = "0.2.0"
edition = "2021"

[dependencies]
abi_stable = { version = "0.11.3", optional = true }
iced = "0.14"
iced_aw = "0.13"
padamo-iced-forms-derive = { path = "./padamo-iced-forms-derive"}
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.9"

[features]
default = ["abi_stable"]
serde = ["dep:serde"]
abi_stable = ["dep:abi_stable"]
