[package]
name = "padamo-jemeuso-root"
version = "0.1.0"
edition = "2021"

[lib]
name = "padamoeusoroot"
crate-type = ["dylib"]


[dependencies]
oxyroot = {git = "https://github.com/saraevrom/oxyroot.git", rev = "8ff5ca4"}
abi_stable = "0.11.3"
padamo-api = { path = "../padamo-api", features = ["ndarray"] }
ndarray = "0.16.1"
once_cell = "1.20.2"
regex = "1.11.1"
chrono = { version = "0.4.39", features = ["alloc"] }
pseudotime = { path = "../pseudotime"}
padamo-core = {path = "../padamo-core"}
