[package]
name = "padamo-mat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "padamomat"
crate-type = ["dylib"]

[dependencies]
# For things to work
abi_stable = "0.11.3"
# Main padamo api
padamo-api = { path = "../padamo-api", features = [] } # Second crate with not yet updated ndarray


matfile = { version = "0.4.1", features = ["ndarray"] }
ndarray = "0.15.6"
