[package]
name = "padamo-neuraltrigger"
version = "0.1.0"
edition = "2021"

[lib]
name = "padamoneuraltrigger"
crate-type = ["dylib"]

[dependencies]
abi_stable = "0.11.3"
# Main padamo api
padamo-api = { path = "../padamo-api" }
ndarray = "0.15.6"
#tract-core = { version = "0.21.5", features = ["openblas"] }
#tract-onnx = "0.21.5"
thiserror = "1.0.61"
#openblas-src = { version = "0.10.9", features = ["static"] }

ort = { version = "2.0.0-rc.2", features = ["cuda", "copy-dylibs"] }
