[package]
name = "padamo-neuraltrigger"
version = "0.2.0"
edition = "2021"

[lib]
name = "padamoneuraltrigger"
crate-type = ["dylib"]

[dependencies]
abi_stable = "0.11.3"
# Main padamo api
padamo-api = { path = "../padamo-api", features = ["ndarray"] }
ndarray = "0.17.1"
#tract-core = { version = "0.21.5", features = ["openblas"] }
#tract-onnx = "0.21.5"
thiserror = "1.0.61"
#openblas-src = { version = "0.10.9", features = ["static"] }

ort = { git = "https://github.com/pykeio/ort", features = ["cuda", "load-dynamic", "download-binaries"], rev = "0377159" }
# ort-sys = { git = "https://github.com/pykeio/ort", features = ["cuda", "download-binaries"], rev = "0377159" }
libloading = "0.8.3"
toml = "0.9.8"
serde = "1.0.228"
cfg-match = "0.2.1"
indicatif = "0.18.3"
reqwest = { version="0.13.2", features = ["stream"] }
futures-util = "0.3.31"
sha2 = "0.10.9"
hex-literal = "1.1.0"
hex = "0.4.3"
arkiv = { version = "0.7.0", features = ["zip", "tar", "gzip", "xz", "bzip", "zstd"] }
pathdiff = "0.2.3"
tokio = "1.49.0"
