[package]
name = "padamo-plaintext"
version = "0.1.0"
edition = "2021"


[lib]
name = "padamoplaintext"
crate-type = ["dylib"]

[dependencies]
pseudotime = { path = "../pseudotime" }
abi_stable = "0.11.3"
padamo-api = { path = "../padamo-api", features = ["ndarray"] }
ndarray = "0.16.1"
regex = "1.11.1"
thiserror = "2.0.6"
chrono = { version = "0.4.39", features = ["alloc"] }
