[package]
name = "padamo-signal-manipulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "padamosignalmanipulation"
crate-type = ["dylib"]



[dependencies]
# For things to work
abi_stable = "0.11.3"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-stats = "0.6.0"
num_cpus = "1.16.0"
# Main padamo api
padamo-api = { path = "../padamo-api" }
rayon = "1.10.0"
