[package]
name = "padamo-stft"
version = "0.1.0"
edition = "2021"

[lib]
name = "padamostft"
crate-type = ["dylib"]


[dependencies]
abi_stable = "0.11.3"
padamo-api = { path = "../padamo-api" }
rayon = "1.10.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
rustfft = "6.2.0"
num_cpus = "1.16.0"
num = "0.4.3"
